Give falsifier probes a gitignored probe source set outside the build